regex issue fixed. matrix data insertion works.

--- a/valiant-parser.ipynb
+++ b/valiant-parser.ipynb
@@ -100,14 +100,14 @@
         "                    if c == var:\n",
         "                        self.remove_rule(var, rule)\n",
         "\n",
-        "    # step - 1: Eliminate the start symbol from right-hand sides\n",
+        "    # step 1: Eliminate the start symbol from right-hand sides\n",
         "    def add_start_symbol(self):\n",
         "        res = self.copy()\n",
         "        res.add_rule('S0', 'S')\n",
         "        res.S = 'S0'\n",
         "        return res\n",
         "\n",
-        "    # Eliminate rules with terminals and non-terminals\n",
+        "    # step 2: Eliminate rules with terminals and non-terminals\n",
         "    def remove_nonsolitary_terminals(self):\n",
         "        res = self.copy()\n",
         "        sub = dict()\n",
@@ -129,7 +129,7 @@
         "                    res.add_rule(var, res.delimiter.join(rule))\n",
         "        return res\n",
         "\n",
-        "    # Eliminate right-hand sides with more than 2 nonterminals\n",
+        "    # step 3: Eliminate right-hand sides with more than 2 nonterminals\n",
         "    def remove_multiple_terminals(self):\n",
         "        res = self.copy()\n",
         "        count = 1\n",
@@ -153,7 +153,7 @@
         "                    res.add_rule(v, res.delimiter.join(tmp))\n",
         "        return res\n",
         "\n",
-        "    # Eliminate null-rules\n",
+        "    # step - 4: Eliminate null-rules\n",
         "    def epsilon_ommit(self, nullable, rule):\n",
         "        if len(self.delimiter.join(rule)) == 1:\n",
         "            return set([rule])\n",
@@ -165,7 +165,6 @@
         "                tmp.remove(c)\n",
         "                res_tmp = self.epsilon_ommit(\n",
         "                    nullable, self.delimiter.join(tmp))\n",
-        "                # print(\"epsion_ommit recur: {}\".format(res_tmp))\n",
         "                res = res.union(res_tmp)\n",
         "        return res\n",
         "\n",
@@ -198,11 +197,10 @@
         "                    for c in nullable:\n",
         "                        if c in rule.split(res.delimiter):\n",
         "                            ommited = res.epsilon_ommit(nullable, rule)\n",
-        "                            # print(ommited)\n",
         "                            res.union_rule(var, ommited)\n",
         "        return res\n",
         "\n",
-        "    # Eliminate eliminate_unit_rule rules\n",
+        "    # step 5: Eliminate eliminate_unit_rule rules\n",
         "    def eliminate_unit_rule(self):\n",
         "        res = self.copy()\n",
         "        stop = False\n",
@@ -350,55 +348,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n",
-            "G(NonTerminals, Terminals, Definitions, Start):\n",
-            "\tNonTerminals={'', '<key>', 'C15', 'C10', '<rules>', 'C14', 'C\"{\"', 'C8', \"C'['\", 'C17', 'C4', 'C1', 'C3', 'C\\'\"\\'', \"C']'\", 'C7', \"C'<'\", 'C5', \"C'\", '<sym>', 'C9', \"C','\", '<def>', '<grammar>', '<rule>', '<defs>', 'C16', 'C11', \"C':'\", 'C\"}\"', 'C6', 'C12', 'C18', \"C'>'\", 'C[a-zA-Z0-9]+', 'C2', 'C13'}\n",
-            "\tTerminals={\"','\", \"'['\", \"']'\", \"'<'\", '\"}\"', \"':'\", '\\'\"\\'', \"'>'\", '[a-zA-Z0-9]+', \"'\", '\"{\"'}\n",
-            "\\Definitions=\n",
-            "\t\t<grammar>\t->\tC\"{\" C10\t|  C9\n",
-            "\t\t<defs>\t->\t<def> C18\t|  <def>\n",
-            "\t\t<rules>\t->\t<rule> <rules>\t|  <rule>\n",
-            "\t\t<rule>\t->\tC'[' C12\t|  C16\n",
-            "\t\t<sym>\t->\t<key> \t|  C1\n",
-            "\t\tC'\t->\t'\n",
-            "\t\tC[a-zA-Z0-9]+\t->\t[a-zA-Z0-9]+\n",
-            "\t\tC'\"'\t->\t'\"'\n",
-            "\t\tC'<'\t->\t'<'\n",
-            "\t\tC'>'\t->\t'>'\n",
-            "\t\tC':'\t->\t':'\n",
-            "\t\tC'['\t->\t'['\n",
-            "\t\tC']'\t->\t']'\n",
-            "\t\tC\"{\"\t->\t\"{\"\n",
-            "\t\tC\"}\"\t->\t\"}\"\n",
-            "\t\tC','\t->\t','\n",
-            "\t\tC1\t->\tC1 C'\n",
-            "\t\tC2\t->\tC[a-zA-Z0-9]+ C'\n",
-            "\t\t<key>\t->\tC'\"' C3\n",
-            "\t\tC3\t->\tC3 C'<'\n",
-            "\t\tC4\t->\tC4 C[a-zA-Z0-9]+\n",
-            "\t\tC5\t->\tC'>' C'\"'\n",
-            "\t\t<def>\t->\t<key> C6\n",
-            "\t\tC6\t->\tC6 C':'\n",
-            "\t\tC7\t->\tC7 C'['\n",
-            "\t\tC8\t->\t<rules> C']'\n",
-            "\t\tC9\t->\tC\"{\" C\"}\"\n",
-            "\t\tC10\t->\tC10 <defs>\n",
-            "\t\tC11\t->\tC\"}\" \n",
-            "\t\tC12\t->\tC12 <sym>\n",
-            "\t\tC13\t->\tC13 C','\n",
-            "\t\tC14\t->\tC14 <rule>\n",
-            "\t\tC15\t->\tC']' \n",
-            "\t\tC16\t->\tC16 \n",
-            "\t\tC17\t->\tC'[' C']'\n",
-            "\t\tC18\t->\t<defs> \n",
-            "\tStart=S0\n"
+            "[[0, \"C'\", 0, 0], [0, 0, \"C'\", 0], [0, 0, 0, \"C'\"], [0, 0, 0, 0]]\n",
+            "[[0, \"C'\"], [0, 0]]\n"
           ]
         }
       ],
       "source": [
         "if __name__ == \"__main__\":\n",
         "    cnf_formatted_grammar = main()\n",
-        "    print(cnf_formatted_grammar)\n",
+        "    #print(cnf_formatted_grammar)\n",
         "\n",
         "    parse_string = \"d<f\"\n",
         "    string_len = len(parse_string)\n",
@@ -413,22 +371,22 @@
         "    terminals = list(cnf_formatted_grammar.Definitions.values())\n",
         "    \n",
         "    # need to write a function in the class to match rules when creating the matrix\n",
-        "    # for i in range(0, string_len):\n",
-        "    #     for term in cnf_formatted_grammar.Terminals:\n",
-        "    #         regex = f'{term}'            \n",
-        "    #         match = re.search(regex, f\"'{parse_string[i]}'\")\n",
-        "    #         if match is not None:\n",
-        "    #             for nt in non_terminals:\n",
-        "    #                 terminal_per_production = list(cnf_formatted_grammar.Definitions[nt])\n",
-        "    #                 if len(terminal_per_production) == 1 and term == terminal_per_production[0]:\n",
-        "    #                     matrix[i][i+1] = nt\n",
-        "    #                     break\n",
-        "    #             break\n",
+        "    for i in range(0, string_len):\n",
+        "        for term in cnf_formatted_grammar.Terminals:\n",
+        "            regex = f'{term}'            \n",
+        "            match = re.search(regex, f\"'{parse_string[i]}'\")\n",
+        "            if match is not None:\n",
+        "                for nt in non_terminals:\n",
+        "                    terminal_per_production = list(cnf_formatted_grammar.Definitions[nt])\n",
+        "                    if len(terminal_per_production) == 1 and term == terminal_per_production[0]:\n",
+        "                        matrix[i][i+1] = nt\n",
+        "                        break\n",
+        "                break\n",
         "\n",
-        "    # print(matrix)\n",
-        "    # mtx = Matrix(matrix)\n",
-        "    # n = len(matrix)\n",
-        "    # print(mtx.copy_submatrix(0, n//2, 0, n//2))\n"
+        "    print(matrix)\n",
+        "    mtx = Matrix(matrix)\n",
+        "    n = len(matrix)\n",
+        "    print(mtx.copy_submatrix(0, n//2, 0, n//2))\n"
       ]
     }
   ],
