--- a/valiant-parser.ipynb
+++ b/valiant-parser.ipynb
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "trusted": true
       },
@@ -252,7 +252,6 @@
         "            self.S\n",
         "        )\n",
         "\n",
-        "\n",
         "def main():\n",
         "    input_grammar = {\n",
         "    \"<grammar>\" : '\"{\" <defs> \"}\" | \"{\" \"}\"',\n",
@@ -282,15 +281,16 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "This class is used for matrix multiplication. This will hold the Valiant's algorithm to create the parser."
+        "This class is used for matrix multiplication."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -300,36 +300,109 @@
         "    def __init__(self, matrix):\n",
         "        self.Matrix = matrix\n",
         "    \n",
+        "    def __add__(self, other):\n",
+        "        n = len(self)\n",
+        "        new_matrix = [[0]*n for i in range(n)]\n",
+        "        for i in range(n):\n",
+        "            for j in range(n):\n",
+        "                new_matrix[i][j] = self.Matrix[i][j] + other.Matrix[i][j]\n",
+        "        return new_matrix\n",
+        "\n",
         "    def copy_submatrix(self, row_start, row_end, col_start, col_end):\n",
         "        sub_matrix = [['']*(col_end - col_start) for i in range(row_end - row_start)]\n",
         "        \n",
         "        for i in range(0, row_end - row_start):\n",
         "            for j in range(0, col_end - col_start):\n",
         "                sub_matrix[i][j] = self.Matrix[row_start + i][col_start + j]\n",
-        "        return sub_matrix\n",
-        "    \n",
-        "    # ToDo: need to write the lemma method to complete the algorithm.\n",
-        "    \n",
+        "        return sub_matrix\n"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Step 2: Calculate the transitive closure of the matrix\n",
+        "\n",
+        "To achieve this, we need to implement the lemma and multiplication proposed by Valiant."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class Valiant_Parser:\n",
+        "    def __init__(self, matrix, grammar):\n",
+        "        self.Grammar = grammar\n",
+        "        self.Matrix = matrix\n",
+        "\n",
+        "    def multiply_bmm(self, matrix_one, matrix_two):\n",
+        "        h = len(self.Grammar.NonTerminals)\n",
+        "        n = len(matrix_one)\n",
+        "        m = len(matrix_two)\n",
+        "        a = [[[False]*n for j in range(n)] for i in range(h)]\n",
+        "        b = [[[False]*m for j in range(n)] for i in range(h)]\n",
+        "\n",
+        "        #needs to complete the multiplication process explained by Valiant\n",
+        "\n",
+        "        # for i in range(n):\n",
+        "        #     for j in range(n):\n",
+        "        #         for k in range(h):\n",
+        "        #             a[i][j][k] = matrix_one[i][j].find(self.Grammar.NonTerminals[i]) == matrix_two.Matrix[i][j]\n",
+        "        \n",
+        "        # for i in range(m):\n",
+        "        #     for j in range(m):\n",
+        "        #         for k in range(h):\n",
+        "        #             a[i][j][k] = matrix_two[i][j].find(self.Grammar.NonTerminals[i]) == matrix_two.Matrix[i][j]\n",
+        "\n",
         "    def calculate_closure(self, sub_matrix):\n",
-        "        n = len(sub_matrix)\n",
-        "        if n == 1:\n",
-        "            return\n",
-        "        \n",
-        "        upper_left_matrix = self.copy_submatrix(sub_matrix, 0, n/2, 0, n/2)\n",
-        "        bottom_right_matrix = self.copy_submatrix(sub_matrix, n/2, n, n/2, n)\n",
-        "        \n",
-        "        self.calculate_closure(upper_left_matrix)\n",
-        "        self.calculate_closure(bottom_right_matrix)\n",
-        "        \n",
-        "    def partition_3(matrix):\n",
-        "        if len(matrix) < 3:\n",
-        "            return;\n",
-        "      #lemma(p, 2*n/3)\n",
+        "      n = len(sub_matrix)\n",
+        "      if n == 1:\n",
+        "          return\n",
+        "      \n",
+        "      upper_left_matrix = self.copy_submatrix(sub_matrix, 0, n/2, 0, n/2)\n",
+        "      bottom_right_matrix = self.copy_submatrix(sub_matrix, n/2, n, n/2, n)\n",
+        "      \n",
+        "      self.calculate_closure(upper_left_matrix)\n",
+        "      self.calculate_closure(bottom_right_matrix)\n",
         "    \n",
-        "    def partition_4(matrix):\n",
-        "        if len(matrix) < 4:\n",
-        "            return;\n",
-        "      #lemma(p, 3*n/4)"
+        "    def partition_2(self, sub_matrix):\n",
+        "        n = len(sub_matrix)\n",
+        "        if n < 4:\n",
+        "          return\n",
+        "        middle_matrix = self.copy_submatrix(sub_matrix, n/4, 3*n//4, n/4, 3*n//4)\n",
+        "        self.partition_2(middle_matrix)\n",
+        "\n",
+        "        upper_left_matrix = self.copy_submatrix(sub_matrix, 0, 3*n//4, 0, 3*n//4)\n",
+        "        bottom_right_matrix = self.copy_submatrix(sub_matrix, n//4, n, n//4, n)\n",
+        "\n",
+        "        self.partition_3(upper_left_matrix)\n",
+        "        self.partition_3(bottom_right_matrix)\n",
+        "\n",
+        "        self.partition_4()\n",
+        "    \n",
+        "\n",
+        "    def partition_3(self, sub_matrix):\n",
+        "        n = len(sub_matrix)\n",
+        "        if len(sub_matrix) < 3:\n",
+        "            return\n",
+        "        self.lemma(sub_matrix, 2*n//3)\n",
+        "    \n",
+        "    def partition_4(self, sub_matrix):\n",
+        "        n = len(sub_matrix)\n",
+        "        if len(sub_matrix) < 4:\n",
+        "            return\n",
+        "        self.lemma(sub_matrix, 3*n//4)\n",
+        "\n",
+        "    def lemma(self, closure_matrix, r):\n",
+        "        n = len(self.Matrix)\n",
+        "        clos_mat = Matrix(closure_matrix)\n",
+        "        c = self.multiply_bmm(clos_mat.copy_submatrix(0, n-r, n-r, r), clos_mat.copy_submatrix(0, n-r, r, n))\n",
+        "        d = clos_mat + c\n",
+        "        self.calculate_closure(d)\n",
+        "        return"
       ]
     },
     {
@@ -341,18 +414,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[[0, \"C'\", 0, 0], [0, 0, \"C'\", 0], [0, 0, 0, \"C'\"], [0, 0, 0, 0]]\n",
-            "[[0, \"C'\"], [0, 0]]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "if __name__ == \"__main__\":\n",
         "    cnf_formatted_grammar = main()\n",
@@ -383,10 +447,10 @@
         "                        break\n",
         "                break\n",
         "\n",
-        "    print(matrix)\n",
-        "    mtx = Matrix(matrix)\n",
-        "    n = len(matrix)\n",
-        "    print(mtx.copy_submatrix(0, n//2, 0, n//2))\n"
+        "    # print(matrix)\n",
+        "    # mtx = Matrix(matrix)\n",
+        "    # n = len(matrix)\n",
+        "    # print(mtx.copy_submatrix(0, n//2, 0, n//2))\n"
       ]
     }
   ],
@@ -406,7 +470,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.9.5 (tags/v3.9.5:0a7dcbd, May  3 2021, 17:27:52) [MSC v.1928 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
